minikube/springapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: springboot-app
        image: leoreinoso/springapp:latest # :v1
        ports:
        - containerPort: 8080
