minikube/springapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: example
  rules:
  - host: springboot.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springboot-app
            port:
              number: 8080
